# chronicle

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: joke.md
docs/superpowers/plans/: 2026-03-17-chronicle.md
docs/superpowers/specs/: 2026-03-17-chronicle-design.md
src/: cli.rs  lib.rs  main.rs
src/daemon/: processor.rs  server.rs
src/db/: models.rs  queries.rs  schema.rs
src/hooks/: installer.rs  mod.rs  relay.rs
src/restore/: mod.rs
src/tui/: app.rs  detail.rs  mod.rs  statusbar.rs  timeline.rs
tests/: integration.rs
