[package]
name = "chronicle-cli"
version = "0.1.0"
edition = "2021"
description = "Record and replay Claude Code sessions — TUI dashboard with time-travel file restoration"
license = "MIT"
repository = "https://github.com/antoinehoriot/chronicle"
homepage = "https://github.com/antoinehoriot/chronicle"
keywords = ["claude", "claude-code", "session-recorder", "tui", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[lib]
name = "chronicle"
path = "src/lib.rs"

[[bin]]
name = "chronicle"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
similar = "2"
zstd = "0.13"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
